# QTalk

./: .gitignore  .gitmodules  .qmlls.ini  CMakeLists.txt  CMakeLists.txt.user.4e93832  LICENSE  README.md  fetch_models.py  main.qml  qtkresources.qrc
.github/actions/common/: action.yml
.github/workflows/: linux.yml
cmake/: CustomOptions.cmake  Toolchain.cmake
cmake/modules/: Git.cmake
docker/: Dockerfile  build.sh  run.sh
src/: AppMessages.cpp  AppMessages.h  CMakeLists.txt  QTKApplication.cpp  QTKApplication.h  QTKApplication_p.h  QTKLoggingCategory.cpp  QTKLoggingCategory.h  main.cpp
src/UI/: MainRootWindow.qml
src/api/: CMakeLists.txt  QTKCorePlugin.cpp  QTKCorePlugin.h  QmlComponentInfo.h
src/chat/: CMakeLists.txt  ChatEngine.cpp  ChatEngine.h  ChatList.cpp  ChatList.h  ChatManager.cpp  ChatManager.h  Message.cpp  Message.h  RecentChat.cpp  RecentChat.h  RecentChatList.cpp  RecentChatList.h  RecentChatProxyList.cpp  RecentChatProxyList.h  User.cpp  User.h  UserList.cpp  UserList.h  UserProxyList.cpp  UserProxyList.h
src/llama/: CMakeLists.txt  ChatEngine.cpp  ChatEngine.h  LlamaEngine.cpp  LlamaEngine_p.cpp  LlamaWorker.cpp  LlamaWorker.h  LlamaWorker_p.cpp  LlamaWorker_p.h
src/llm/: AbstractLLMEngine.h  CMakeLists.txt  LlamaEngine.h  LlamaEngine_p.h  MockLlmEngine.cpp  MockLlmEngine.h
src/qmlcontrols/: CMakeLists.txt  ChatBubble.qml  ChatInput.qml  ChatThread.qml  HomePage.qml  MainRootWindowHeader.qml  MainWindowResizer.qml  QTKBusyIndicator.qml  QTKIcon.qml  QTKIconButton.qml  QTKPalette.cpp  QTKPalette.h  QTKStackView.qml  QTalkQmlGlobal.cpp  QTalkQmlGlobal.h  ScreenTools.qml
src/ui/: CMakeLists.txt  ChatPage.qml  HomePage.qml  MainRootWindow.qml  SplashScreen.qml
src/utilities/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h
test/: CMakeLists.txt  UnitTestList.cpp  UnitTestList.h  UnitTestManager.cpp  UnitTestManager.h
test/chat/: CMakeLists.txt  ChatEngineTest.cpp  ChatEngineTest.h
test/qtkunittest/: CMakeLists.txt  UnitTest.cpp  UnitTest.h
tools/setup/: install_deps_debian.sh  install_qt_debian.sh
